@@ -1,0 +1,5 @@
+M0_ GND en1 @x GND nch W=5u L=2u
+M1_ GND en2 @x GND nch W=5u L=2u
+M2_ @x a #0 GND nch W=5u L=2u
+M3_ #0 b _o GND nch W=5u L=2u
+
