@@ -1,0 +1,9 @@
+.subckt foo<> _o _p a b en
+M0_ GND en @i GND nch W=5u L=2u
+M1_:pchg Vdd en @i Vdd pch W=5u L=2u
+M2_ @i a _o GND nch W=5u L=2u
+M3_ @i b _p GND nch W=5u L=2u
+.ends
+
+xbar bar._o bar._p bar.a bar.b bar.en foo<>
+
