@@ -1,0 +1,28 @@
+* subcircuit c1of2<> is empty.
+.subckt add<> a.d[0] a.d[1] b.d[0] b.d[1] c.d[0] c.d[1] en s.d[0] s.d[1]
+M0_ GND en @foot GND nch W=5u L=2u
+M1_:pchg Vdd en @foot Vdd pch W=5u L=2u
+M2_ @foot a.d[1] @odd_a GND nch W=5u L=2u
+M3_ @odd_a b.d[0] @odd_b GND nch W=5u L=2u
+M4_ @foot a.d[0] @even_a GND nch W=5u L=2u
+M5_ @even_a b.d[1] @odd_b GND nch W=5u L=2u
+M6_:pchg Vdd en @odd_b Vdd pch W=5u L=2u
+M7_ @odd_b c.d[1] _s[0] GND nch W=5u L=2u
+M8_:pchg Vdd en @odd_a Vdd pch W=5u L=2u
+M9_ @odd_a b.d[1] @even_b GND nch W=5u L=2u
+M10_:pchg Vdd en @even_a Vdd pch W=5u L=2u
+M11_ @even_a b.d[0] @even_b GND nch W=5u L=2u
+M12_:pchg Vdd en @even_b Vdd pch W=5u L=2u
+M13_ @even_b c.d[0] _s[0] GND nch W=5u L=2u
+M14_ @odd_b c.d[0] _s[1] GND nch W=5u L=2u
+M15_ @even_b c.d[1] _s[1] GND nch W=5u L=2u
+M16_ Vdd en _s[0] Vdd pch W=5u L=2u
+M17_ Vdd en _s[1] Vdd pch W=5u L=2u
+M18_ GND _s[0] s.d[0] GND nch W=5u L=2u
+M19_ Vdd _s[0] s.d[0] Vdd pch W=5u L=2u
+M20_ GND _s[1] s.d[1] GND nch W=5u L=2u
+M21_ Vdd _s[1] s.d[1] Vdd pch W=5u L=2u
+.ends
+
+xup up.a.d[0] up.a.d[1] up.b.d[0] up.b.d[1] up.c.d[0] up.c.d[1] up.en up.s.d[0] up.s.d[1] add<>
+
